<resources>
    <string name="app_name">QuietZone_app</string>
    <string name="settings_heading">Setting</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_avatar_desc">Profile Avatar</string>
    <string name="noise_levels_title">Noise Levels</string>
    <string name="room_name_placeholder">Room</string>
    <string name="room_name_format">%1$s</string>
    <string name="room_group_status_waiting">Waiting</string>
    <string name="room_group_status_error">Error</string>
    <string name="room_sound_placeholder">-- dB</string>
    <string name="room_status_placeholder">Status: --</string>
    <string name="room_status_waiting">Status: Waiting...</string>
    <string name="room_status_error">Status: Error</string>
    <string name="room_status_quiet">Status: Quiet</string>
    <string name="room_status_moderate">Status: Moderate</string>
    <string name="room_status_loud">Status: Loud</string>
    <string name="room_group_quiet">Quiet</string>
    <string name="room_group_moderate">Moderate</string>
    <string name="room_group_loud">Loud</string>
    <string name="room_button_more_info">More Information</string>
    <string name="room_button_no_details">No Details</string>
    <string name="room_sound_format">%1$.1f dB</string>
    <string name="room_noise_level_format">%1$s Noise Level</string>
    <string name="room_sound_level_placeholder">Sound Level: -- dB</string>
    <string name="room_sound_level_display_format">Sound Level: %1$.1f dB</string>
    <string name="room_chart_loading">Loading...</string>
    <string name="room_chart_no_data">No readings yet</string>
    <string name="room_chart_range_format">%1$s - %2$s</string>
    <string name="room_recent_readings">Recent Readings (Newest First)</string>
    <string name="room_table_time">Time</string>
    <string name="room_table_db">dB</string>
    <string name="room_table_status">Status</string>
    <string name="room_database_error_format">Database Error: %1$s</string>
    <string name="setup_title">Device Setup</string>
    <string name="setup_permission_required">Wi-Fi scan permission is required for setup.</string>
    <string name="setup_wifi_unavailable">Wi-Fi service unavailable on this device.</string>
    <string name="setup_scan_failed">Scan failed. Showing cached results.</string>
    <string name="setup_scanning">Scanning setup hotspots...</string>
    <string name="setup_no_devices">No setup devices found. Move closer and scan again.</string>
    <string name="setup_found_devices">Found %1$d setup device(s). Tap one to connect.</string>
    <string name="setup_connecting">Connecting to %1$s...</string>
    <string name="setup_connected">Connected to %1$s</string>
    <string name="setup_connect_failed">Could not connect to selected setup network.</string>
    <string name="setup_connected_toast">Connected to %1$s</string>
    <string name="setup_esp_endpoint">Send configuration to: http://192.168.4.1/config</string>
    <string name="setup_pi_endpoint">Send configuration to: http://192.168.4.1/setup</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_title">Sign Up</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_confirm_password_hint">Confirm Password</string>
    <string name="signup_create_button">Create Account</string>
    <string name="signup_fill_fields">Please fill in all fields</string>
    <string name="signup_password_mismatch">Passwords do not match</string>
    <string name="signup_failed">Sign up failed: %1$s</string>
</resources>